--- a/styles.css
+++ b/styles.css
@@ -43,8 +43,7 @@ main {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 50%;
-    min-width: 500px;
+    width: 80vw;
     max-width: 800px;
     margin: 60px auto;
 }
